--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <h3>Top Words</h3>
                 <p>There is a flagrant differences of focus between the right and left trolls.
-                The Right Trolls are more involved in politics and news. First, ‘Trump’, ‘Hillary’ and ‘Obama’ are the most popular words, with ‘Clinton’ and ‘President’ also appearing. Overall, the word ‘Trump’ is used about 145’000 times or about 13% of the total tweets! Second, there is a visible focus on news as well, both the words ‘news’ and ‘break’ crack the top ten. Most of the ‘break’ appearance are stemmed from ‘breaking news’.<br>On the other hand, the Left trolls often used words related to music (‘music’, ‘live’, ‘play’, ‘video’) and social movement related to black people (‘black’, ‘live’ and ‘matter’ etc) as well as discrimination against black people (‘white’, ‘police’). Surprisingly, the words ‘Hillary’, ‘Clinton’ and ‘Obama’ are used more by the right trolls than the left trolls. This highlights a disinterest in politics from these trolls.</p>
+                The Right Trolls are more involved in politics and news. First, <i>Trump</i>, <i>Hillary</i> and <i>Obama</i> are the most popular words, with <i>Clinton</i> and <i>President</i> also appearing. Overall, the word <i>Trump</i> is used about 145’000 times or about 13% of the total tweets! Second, there is a visible focus on news as well, both the words <i>news</i> and <i>break</i> crack the top ten. Most of the <i>break</i> appearance are stemmed from <i>breaking news</i>. <br>On the other hand, the Left trolls often used words related to music (<i>music</i>, <i>live</i>, <i>play</i>, <i>video</i>) and social movement related to black people (<i>black</i>, <i>live</i> and <i>matter</i> etc) as well as discrimination against black people (<i>white</i>, <i>police</i>). Surprisingly, the words <i>Hillary</i>, <i>Clinton</i> and <i>Obama</i> are used more by the right trolls than the left trolls. This highlights a disinterest in politics from these trolls.</p>
 
                 <object width="1000" height="400" align="middle" data="plots/Top_words.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
@@ -325,7 +325,7 @@
 
 				<p>Maybe the election is a too big event for the trolls to have a significant and measurable impact on. It might also by that most of the voting citizen were already convicted of whom they would vote for and their opinion was already set. <br> What about after the elections ? Does the way the new president was perceived by the population could be influenced by the nasty trolls ? Let’s dive into it with a similar strategy as before. Before getting to the exciting correlation stuff, let’s take a look at the Trump popularity curves over time (Build with data of various pollsters stating the approval and disapproval rate of Trump).</p>
 
-				<object width="1000" height="800" align="middle" data="plots/Polls_presidensy_tweets_density.html" class="bokeh_plot">
+				<object width="1000" height="625" align="middle" data="plots/Polls_presidensy_tweets_density.html" class="bokeh_plot">
                     Your browser doesn’t support the object tag. 
                 </object>
 
@@ -351,9 +351,9 @@
 					<div class="EPFLfooter">
 						<img src="images/EPFL_logo.png" alt="EPFL Logo" class="EPFLlogo">
 					</div>
-					<div class="DLABfooter">
+					<!--<div class="DLABfooter">
 						<img src="images/dlab.svg" alt="DLAB Logo" class="DLABlogo">
-					</div>
+					</div>-->
 				</div>
 				<div class="BottomCenterFooter">
 						<p class="Date">December 2018</p>
