--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<p>How can we gain a clearer image of who are trolls? We want to know how do they tweet, how many followers they have and how the subjects differ from right-trolls to left-trolls.</p>
 
-				<p>The plot below presents the number of right and left trolls tweets with the top hashtag per day. The distribution is not smooth but rather follows an interesting spiking behavior. A larger activity is observable during the final election period in October 2016 and the summer 2017. Summer 2017 was a very eventful period both internationally and nationally.</p>
+				<p>The plot below presents the number of right and left trolls tweets with the top hashtag per day. The distribution is not smooth but rather follows an interesting spiking behavior. A larger activity is observable during the final election period in October 2016 and the summer 2017. Summer 2017 was a very eventful period both internationally and nationally.<br><br></p>
 
 				<!-- TWEET ACTIVITY PLOT -->
 				<!--<object width="1000" height="1000" align="middle" data="plots/Follower_Plot.html" class="bokeh_plot"> 
@@ -89,7 +89,7 @@
 
 				<p>All these events help explain the dramatic increase in tweet activity, reaching 14’000 posts in a single day! While the Right trolling starts in the early 2015 and decreases at the end of 2017, the Left trolls concentrate their activity in 2016 until it suddenly stops in mid-2017 when less than fifty messages are posted per day and do not react to the aforementioned events. Unfortunately, we could not provide any explanations about the dramatic drop in both right and left troll activity in the beginning of May 2017. While the right troll activity picks up again during the aforementioned 2017 summer, the left trolls barely react to the craze.</p>
 
-				<p>The top hashtag per day exhibit a large variety of terms and no clear tendency is observable, highlighting the reactivity and temporarity of Twitter topics. Nonetheless, <i>#youtube<\i>  is often the most popular hashtag for the Left trolls in the early 2017.</p>
+				<p>The top hashtag per day exhibit a large variety of terms and no clear tendency is observable, highlighting the reactivity and temporarity of Twitter topics. Nonetheless, <i>#youtube</i>  is often the most popular hashtag for the Left trolls in the early 2017.</p>
 
 				<p>The most popular expression in the tweet content is analysed for each category. It should be noted that the words are stemmed to count root words, focusing on subject more than form. The color code represents the trolls orientation of an expression:</p>
 
@@ -348,7 +348,7 @@
 			
 			<!-- LINK WITH THE TRUMP PRESIDENCY -->
 			<div class="PresidencyLink">
-				<h2 class='Title'>A link with the Presidency Polls?</h2>
+				<h2 class='Title'>A link with Trump Presidency Approval Rate?</h2>
 
 				<p>Maybe the election is an event too big for the trolls to have a significant and measurable impact. It might also be that most of the voter were already convicted of their votes for and their opinion was already set.</p>
 
@@ -370,7 +370,7 @@
 			<div class="Conclusion">
 				<h2 class="Title">Conclusion</h2>
 
-				
+
 			</div>
 			
 
