--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				  <button class="tablinks" onclick="openTopic(event, 'Obama')">Obama</button>
 				  <button class="tablinks" onclick="openTopic(event, 'Election')">Election</button>
 				  <button class="tablinks" onclick="openTopic(event, 'Voter')">Voter</button>
-				  <button class="tablinks" onclick="openTopic(event, 'HealthCare')">HealthCare</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Healthcare')">HealthCare</button>
 				  <button class="tablinks" onclick="openTopic(event, 'Gouvernment')">Gouvernment</button>
 				  <button class="tablinks" onclick="openTopic(event, 'Religion')">Religion</button>
 				  <button class="tablinks" onclick="openTopic(event, 'Conservative')">Conservative</button>
@@ -183,11 +183,11 @@
 				</div>
 
 				<div id="Hacking" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> hacking leading to email leaks, data breach and other.</p>
+				  <p><span class="tabContentTopic">Topic related to</span> hacking and data breach. Mostly related to the DNC hacking and leaked emails.</p>
 				</div>
 
 				<div id="Sanders" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> the senator Bernie Sanders who was the oponent of Hillary Clinton for the democrate primary nomination.</p>
+				  <p><span class="tabContentTopic">Topic related to</span> the senator Bernie Sanders who was Hillary Clinton's opponent for the democrate primary nomination.</p>
 				</div>
 
 				<div id="Obama" class="tabcontent">
@@ -195,15 +195,15 @@
 				</div>
 
 				<div id="Election" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> elections campaignes, debats, votations and other.</p>
+				  <p><span class="tabContentTopic">Topic related to</span> 2016 US presidential election. This includes, debats, votations and other.</p>
 				</div>
 
 				<div id="Voter" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> voter fraud.</p>
+				  <p><span class="tabContentTopic">Topic related to</span> voter fraud, a topic Trump referenced multiple times without tangible proof.</p>
 				</div>
 
-				<div id="HealthCare" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> the heath care.</p>
+				<div id="Healthcare" class="tabcontent">
+				  <p><span class="tabContentTopic">Topic related to</span> the heathcare, specifically medicare (<i>Obamacare</i>) which Trump vowed to repeal.</p>
 				</div>
 
 				<div id="Gouvernment" class="tabcontent">
@@ -215,7 +215,7 @@
 				</div>
 
 				<div id="Conservative" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> conservatist republican anti migran in favor of weapon bearing</p>
+				  <p><span class="tabContentTopic">Topic related to</span> conservatist republican anti immigrant and in favor of gun ownership</p>
 				</div>
 
 				<div id="Liberal" class="tabcontent">
@@ -235,7 +235,7 @@
 				</div>
 
 				<div id="BlackLivesMatter" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> the BlackLivesMatter protest movement fighting against black persons discrimination (Mainly because of police brutalities).</p>
+				  <p><span class="tabContentTopic">Topic related to</span> the <i>Black Lives Matter</i> movement fighting against discrimination against african-americans. This includes police brutality and biases.</p>
 				</div>
 
 				<div id="MeToo" class="tabcontent">
@@ -251,7 +251,7 @@
 				</div>
 
 				<div id="Scandal" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> scandal over various subjects such as money or political.</p>
+				  <p><span class="tabContentTopic">Topic related to</span> various scandals, financial, political and other.</p>
 				</div>
 
 				<div id="Charlottesville" class="tabcontent">
@@ -259,7 +259,7 @@
 				</div>
 
 				<div id="Economy" class="tabcontent">
-				  <p><span class="tabContentTopic">Topic related to</span> economy in general.</p>
+				  <p><span class="tabContentTopic">Topic related to</span> the United States' economy in general.</p>
 				</div>
 
 				<script>
