--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 				<div id='dashboard'></div>
 				<script src="javascript/dashboard.js" type="text/javascript"></script>
 				
-				<p>The most popular topics concur with the most popular expressions found previously. More than 15% of the tweets were related to Donald Trump, 10% to the <i>Black Lives Matter<i\> and  9% to the elections. Our model is able to detect to detect 9,2% of tweets that do not mention Trump directly but are related to him in a way or another.</p>
+				<p>The most popular topics concur with the most popular expressions found previously. More than 15% of the tweets were related to Donald Trump, 10% to the <i>Black Lives Matter</i> and  9% to the elections. Our model is able to detect to detect 9,2% of tweets that do not mention Trump directly but are related to him in a way or another.</p>
 
 				<p>The distribution of topics among the trolls categories are uneven. In general, Right trolls are dominating every category.
 					<ul>
