--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 				<p>Apparently no. The spearman coefficient measures the correlation between two variables: coefficient of 1 or -1 indicates a strong correlation whereas a coefficient of 0 indicates a lack of correlation.<br> As the coefficient are low for most topics, no dependency is found between the troll tweeting activity and the campaign polls. Albeit small, the correlations are higher for Trump polls, specifically for right troll tweets on subject concerning Clinton (<i>Hacking</i> and <i>Hillary</i>). Interestingly, right troll tweeting about the <i>Black Lives Matter</i> movement have a positive impact on Trump’s polls. This  difference supports the theory of more politically engaged right tweets. Anyway, 0.4 is too low to confirm any correlation, this is confirmed by the points distribution. <br> The higher impact observed for right tweets doesn’t mean that the trolls have an influence on the polls, it just shows that they evolves more or less together.<br> Hence : 
 					<ul>
 						<li>Troll tweets does not seems to have had an effect on the polls during the 2016 elections as no strong correlation can be found!</li>
-						<li>Right tweets about <i>‘Hillary’</i>, <i>‘Hacking’<\i>, and <i>‘Black Lives Matter’</i> seems to have the best correlation, yet small, with the Polls in Trump’s favor.</li>
+						<li>Right tweets about <i>‘Hillary’</i>, <i>‘Hacking’</i>, and <i>‘Black Lives Matter’</i> seems to have the best correlation, yet small, with the Polls in Trump’s favor.</li>
 					</ul>
 				</p>
 			</div>
